--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/BinanceAPI/Properties/Settings.Designer.cs
+/BinanceAPI/Properties/Settings.settings
