Add nlog,tryCatch,fixed bug with saving

--- a/BinanceAPI/BinanceAPI.csproj
+++ b/BinanceAPI/BinanceAPI.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Binance.Net" Version="7.2.2" />
     <PackageReference Include="devexpress.wpf.core" Version="21.1.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="NLog" Version="4.7.12" />
     <PackageReference Include="Telegram.Bot" Version="16.0.2" />
   </ItemGroup>
 
@@ -24,6 +25,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
